# visual_place_recognition_ros

./: CMakeLists.txt  README.md  package.xml
dataset/: data.csv
docs/: Demo.md
include/visual_place_recognition/: realtime_visual_place_recognition.h  visual_place_recognition.h
launch/: create_dataset.launch  create_dataset.rviz  realtime_vpr.launch  rviz.rviz  unzipping.launch  visual_place_recognition.launch
msg/: Feature.msg
src/: realtime_visual_place_recognition.cpp  visual_place_recognition.cpp
