<?xml version="1.0"?>
<package format="3">
  <name>visual_place_recognition_ros</name>
  <version>0.0.0</version>
  <description>The visual_place_recognition_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>dbow3_ros</build_depend>

  <exec_depend>pcl_ros</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
